chore: prepare for publish

--- a/package.json
+++ b/package.json
@@ -9,7 +9,23 @@
     "dev": "tsc -w",
     "cli": "node dist/cli.js"
   },
-  "keywords": [],
+  "keywords": [
+    "AI",
+    "QA",
+    "Gherkin",
+    "BDD",
+    "Cucumber",
+    "Testing",
+    "Automation",
+    "Requirements",
+    "Acceptance Criteria",
+    "Playwright",
+    "Cypress",
+    "OpenAI",
+    "Product Quality",
+    "Software Testing",
+    "Domtree"
+  ],
   "author": "",
   "license": "MIT",
   "type": "commonjs",
